plugins {
    id 'com.android.application'
    id 'androidx.room'
}

android {
    namespace "com.zzy.dicegames"
    compileSdkVersion 35
    buildToolsVersion "36.0.0"
    defaultConfig {
        applicationId "com.zzy.dicegames"
        minSdkVersion 26
        targetSdkVersion 35
        versionCode 7
        versionName '1.4.1'
        testInstrumentationRunner 'androidx.test.runner.AndroidJUnitRunner'
    }
    buildTypes {
        release {
            minifyEnabled false
            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
        }
    }
    compileOptions {
        sourceCompatibility = 17
        targetCompatibility = 17
    }
    testOptions {
        unitTests {
            includeAndroidResources true
        }
    }
    room {
        schemaDirectory "$projectDir/schemas"
    }
}

dependencies {
    implementation fileTree(dir: 'libs', include: ['*.jar'])
    implementation 'androidx.appcompat:appcompat:1.7.0'
    implementation 'androidx.fragment:fragment:1.7.0'
    implementation 'androidx.room:room-runtime:2.7.1'
    annotationProcessor 'androidx.room:room-compiler:2.7.1'
    implementation 'androidx.lifecycle:lifecycle-viewmodel:2.9.0'
    implementation 'androidx.lifecycle:lifecycle-livedata:2.9.0'
    implementation 'androidx.recyclerview:recyclerview:1.4.0'

    testImplementation 'junit:junit:4.13.2'
    testImplementation 'org.mockito:mockito-core:4.11.0'
    testImplementation 'org.robolectric:robolectric:4.14.1'
    testImplementation 'androidx.arch.core:core-testing:2.2.0'

    androidTestImplementation 'androidx.test:core:1.6.1'
    androidTestImplementation 'androidx.test:runner:1.6.1'
    androidTestImplementation 'androidx.test:rules:1.6.1'
    androidTestImplementation 'androidx.test.ext:junit:1.2.1'
}
